--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,18 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "antd": "^4.8.6",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
-    "react": "^16.11.0",
+    "google": "^2.1.0",
+    "react": "^16.14.0",
     "react-dom": "^16.11.0",
+    "react-geocode": "^0.2.2",
+    "react-google-autocomplete": "^1.2.6",
+    "react-google-maps": "^9.4.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
+    "recharts": "^1.8.5",
     "weather": "git+https://github.com/akashyap2013/Weather_App.git"
   },
   "scripts": {
